# routeros

./: .gitignore  LICENSE  README.md
8291_honeypot/: CMakeLists.txt  README.md
8291_honeypot/results/: 11042019.pcap  11042019.txt
8291_honeypot/src/: list.hpp  logging.cpp  logging.hpp  main.cpp  mt_connection.cpp  mt_connection.hpp  mt_server.cpp  mt_server.hpp  user_dat.hpp
8291_scanner/: CMakeLists.txt  README.md
8291_scanner/src/: main.cpp
brute_force/winbox_brute/: CMakeLists.txt  README.md
brute_force/winbox_brute/src/: main.cpp
brute_force/www_brute/: CMakeLists.txt  README.md
brute_force/www_brute/src/: main.cpp
cleaner_wrasse/: CMakeLists.txt  README.md
cleaner_wrasse/sh/: README.md  wrasse.sh
cleaner_wrasse/src/: main.cpp  makemessage.cpp  makemessage.hpp  sploit.cpp  sploit.hpp
common/: curve25519-donna.cpp  curve25519-donna.hpp  des.cpp  des.hpp  jsproxy_session.cpp  jsproxy_session.hpp  md4.cpp  md4.hpp  md5.cpp  md5.hpp  rc4.cpp  rc4.hpp  session.cpp  session.hpp  sha1.cpp  winbox_message.cpp  winbox_message.hpp  winbox_session.cpp  winbox_session.hpp
find_handlers/: README.md
get_policies/: CMakeLists.txt
get_policies/samples/: handlers.csv
get_policies/src/: main.cpp
jsproxy_pcap_parser/: CMakeLists.txt
jsproxy_pcap_parser/samples/: session_json_admin_z3n.pcap
jsproxy_pcap_parser/src/: main.cpp  session_parser.cpp  session_parser.hpp
jsproxy_pcap_password_bruteforce/: CMakeLists.txt
jsproxy_pcap_password_bruteforce/src/: main.cpp  session_parser.cpp
ls_npk/: CMakeLists.txt  README.md
ls_npk/src/: main.cpp
modify_npk/: CMakeLists.txt  README.md
modify_npk/src/: main.cpp
msg_re/find_handlers/: find_handlers.py
msg_re/get_policies/: CMakeLists.txt  README.md
msg_re/get_policies/samples/: x3.csv
msg_re/get_policies/src/: main.cpp
msg_re/parse_x3/: CMakeLists.txt
msg_re/parse_x3/samples/: system_6_43_45.x3
msg_re/parse_x3/src/: main.cpp
option_npk/: CMakeLists.txt  README.md
option_npk/src/: main.cpp
parse_x3/: CMakeLists.txt  README.md
parse_x3/samples/: system_6_32_2.x3  system_6_35_4.x3  system_6_39_2.x3
pcap_parsers/jsproxy_pcap_parser/: CMakeLists.txt  README.md
pcap_parsers/jsproxy_pcap_parser/src/: session_parser.cpp
pcap_parsers/jsproxy_pcap_password_bruteforce/: CMakeLists.txt  README.md
pcap_parsers/jsproxy_pcap_password_bruteforce/sample/: login.pcap  passwords.txt
pcap_parsers/jsproxy_pcap_password_bruteforce/src/: session_parser.hpp
pcap_parsers/winbox_pcap_parser/: CMakeLists.txt  README.md
pcap_parsers/winbox_pcap_parser/modules/: FindPCAP.cmake
pcap_parsers/winbox_pcap_parser/src/: main.cpp
poc/bytheway/: CMakeLists.txt  README.md
poc/bytheway/src/: main.cpp
poc/cve_2018_1156/: CMakeLists.txt  README.md
poc/cve_2018_1156/src/: main.cpp
poc/cve_2018_1157/: CMakeLists.txt  README.md
poc/cve_2018_1157/src/: main.cpp
poc/cve_2018_1158/: CMakeLists.txt  README.md
poc/cve_2018_1158/src/: main.cpp
poc/cve_2018_1159/: CMakeLists.txt  README.md
poc/cve_2018_1159/src/: main.cpp
poc/cve_2018_14847/: CMakeLists.txt  README.md
poc/cve_2018_14847/src/: main.cpp
poc/cve_2018_14847_www/: CMakeLists.txt  README.md
poc/cve_2018_14847_www/src/: main.cpp
poc/cve_2019_13954/: CMakeLists.txt  README.md
poc/cve_2019_13954/src/: main.cpp
poc/cve_2019_13955/: CMakeLists.txt  README.md
poc/cve_2019_13955/src/: main.cpp
poc/cve_2019_15055/: README.md
poc/cve_2019_15055/shared_obj/: snmp_exec.c
poc/cve_2019_3924/: CMakeLists.txt  README.md
poc/cve_2019_3924/src/: main.cpp
poc/cve_2019_3943/: CMakeLists.txt  README.md
poc/cve_2019_3943/src/: main.cpp
poc/cve_2019_3943_defconf/: CMakeLists.txt  README.md
poc/cve_2019_3943_defconf/sh/: DEFCONF
poc/cve_2019_3943_defconf/src/: main.cpp
poc/cve_2019_3943_dev_shell/: CMakeLists.txt  README.md
poc/cve_2019_3943_dev_shell/src/: main.cpp
poc/cve_2019_3943_dev_shell_www/: CMakeLists.txt  README.md
poc/cve_2019_3943_dev_shell_www/src/: main.cpp
poc/cve_2019_3943_libz/: CMakeLists.txt  README.md
poc/cve_2019_3943_libz/src/: main.cpp
poc/cve_2019_3943_snmp_lib/: CMakeLists.txt  README.md
poc/cve_2019_3943_snmp_lib/shared_obj/: snmp_exec.c  snmp_exec.h
poc/cve_2019_3943_snmp_lib/src/: main.cpp
poc/cve_2019_3943_www/: CMakeLists.txt  README.md
poc/cve_2019_3943_www/src/: main.cpp
poc/cve_2019_3981/: winbox_server.py
poc/cve_2020_5720/: winbox_drop_file.py
poc/execute_milo/: CMakeLists.txt  README.md
poc/execute_milo/src/: main.cpp
poc/execute_milo/vm_bins/: busybox  milo  milo.c
poc/hf_tracefile/: CMakeLists.txt  README.md
poc/hf_tracefile/src/: main.cpp
poc/hf_tracefile_www/: CMakeLists.txt  README.md
poc/hf_tracefile_www/src/: main.cpp
poc/skeleton/: CMakeLists.txt  README.md
poc/skeleton/src/: main.cpp
poc/winbox_dns_request/: CMakeLists.txt  README.md
poc/winbox_dns_request/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: winbox_parse_json_test.cpp  winbox_parse_test.cpp  winbox_serialize_binary_test.cpp  winbox_serialize_json_test.cpp
winbox_pcap_parser/: CMakeLists.txt
winbox_pcap_parser/samples/: winbox_sample.pcap
winbox_pcap_parser/src/: main.cpp
www_scanner/: mt_www_version.py
